--- a/templates/parentmake.template
+++ b/templates/parentmake.template
@@ -31,7 +31,7 @@ $(BUILD_DIR)/%.c.o : %.c
 $(NAME):	library
 $(NAME):    $(OBJS) $(LIB_FILES)
 	@echo Linking $@
-	@$(CC) $(CFLAGS) $(OBJS) $(addprefix -L,$(LIBS)) $(addprefix -l,$(LIBS)) -o $(BUILD_DIR)/$(NAME)
+	@$(CC) $(CFLAGS) $(OBJS) $(addprefix -L,$(LIBS)) $(addprefix -l,$(LIBS)) -o $(BIN_DIR)/$(NAME)
 
 release: CFLAGS += -03 -march=native
 release: fclean
@@ -56,7 +56,7 @@ clean:
 
 fclean:
 	@rm -rf $(BUILD_DIR)
-	@rm -rf $(BUILD_DIR)/$(NAME)
+	@rm -rf $(BIN_DIR)/$(NAME)
 	@$(MAKE) -C $(LIBS_DIR) fclean
 	@printf "[`tput setaf 3`make`tput sgr0`] fclean done\n"
 
