added linux criterion support

--- a/templates/testmake.template
+++ b/templates/testmake.template
@@ -4,6 +4,8 @@ CC = gcc
 SRC_DIR ?= ../src
 OBJ_DIR ?= ../build
 
+UNAME = $(shell uname -s)
+
 TEST_FLAGS ?=
 
 SRCS = $(shell find $(SRC_DIR) -name *.c)
@@ -12,12 +14,17 @@ OBJS = $(SRCS:%=$(OBJ_DIR)/%.o)
 TESTS = $(shell find . -name *.c)
 BIN_DIR = ./bin
 TEST_BINS = $(patsubst ./%.c, $(BIN_DIR)/%, $(TESTS))
-CRITERION_INC = $(shell find criterion* -type d -name include)
-CRITERION_DIR = $(dir $(shell find criterion* -type f -name "libcriterion.dylib"))
+ifeq ($(UNAME), Linux)
+	CRITERION_DIR = $(dir $(shell find criterion* -type f -name "libcriterion.so"))
+else
+	CRITERION_DIR = $(dir $(shell find criterion* -type f -name "libcriterion.dylib"))
+endif
+CRITERION_INC = $(shell find $(CRITERION_DIR:%/lib/=%) -type d -name include)
 
 all:	$(TEST_BINS)
 	@for test in $(TEST_BINS); do \
 		export "DYLD_LIBRARY_PATH=$(shell pwd)/$(CRITERION_DIR)" ; \
+		export "LD_LIBRARY_PATH=$(shell pwd)/$(CRITERION_DIR)" ; \
 		printf "[`tput setaf 1`test`tput sgr0`] running $$test\n" ; \
 		./$$test || true; \
 	done
