--- a/templates/parentmake.template
+++ b/templates/parentmake.template
@@ -2,8 +2,6 @@ CFLAGS := -Wall -Wextra -Werror -g3
 CC = gcc
 MAKEFLAGS += --no-print-directory
 
-NAME = [name]
-
 #UNAME = $(shell uname -s)
 
 #directories
@@ -14,12 +12,14 @@ BIN_DIR ?= ./bin
 INC_DIR := ./include
 BUILD_DIR ?= ./build
 
+NAME = $(BIN_DIR)/[name]
+
 SRCS = $(shell find $(SRC_DIR) -name *.c)
 OBJS = $(SRCS:%=$(BUILD_DIR)/%.o)
 
-LIBS = $(shell $(MAKE) -C $(LIBS_DIR) lib_names)
-LIB_FILES = $(addprefix $(LIBS_DIR)/,$(shell $(MAKE) -C $(LIBS_DIR) lib_path))
-LIBS_INC = $(addprefix $(LIBS_DIR)/,$(shell $(MAKE) -C $(LIBS_DIR) lib_inc))
+LIBS = $(shell $(MAKE) --no-print-directory -C $(LIBS_DIR) lib_names)
+LIB_FILES = $(addprefix $(LIBS_DIR)/,$(shell $(MAKE) --no-print-directory -C $(LIBS_DIR) lib_path))
+LIBS_INC = $(addprefix $(LIBS_DIR)/,$(shell $(MAKE) --no-print-directory -C $(LIBS_DIR) lib_inc))
 
 TEST_FLAGS = $(addprefix -I../,$(LIBS_INC)) -I../$(INC_DIR) $(addprefix -L../,$(LIBS)) $(addprefix -l,$(LIBS))
 
@@ -29,9 +29,9 @@ $(BUILD_DIR)/%.c.o : %.c
 	@$(CC) -c $(CFLAGS) $(addprefix -I,$(LIBS_INC)) -I$(INC_DIR) $< -o $@
 
 $(NAME):	library
-$(NAME):    $(OBJS) $(LIB_FILES)
-	@echo Linking $@
-	@$(CC) $(CFLAGS) $(OBJS) $(addprefix -L$(LIBS_DIR)/,$(LIBS)) $(addprefix -l,$(LIBS)) -o $(BIN_DIR)/$(NAME)
+$(NAME):	$(OBJS) $(LIB_FILES)
+	@printf "[`tput setaf 3`make`tput sgr0`] linking $@\n"
+	@$(CC) $(CFLAGS) $(OBJS) $(addprefix -L$(LIBS_DIR)/,$(LIBS)) $(addprefix -l,$(LIBS)) -o $(NAME)
 
 release: CFLAGS += -03 -march=native
 release: fclean
@@ -56,7 +56,7 @@ clean:
 
 fclean:
 	@rm -rf $(BUILD_DIR)
-	@rm -rf $(BIN_DIR)/$(NAME)
+	@rm -rf $(NAME)
 	@$(MAKE) -C $(LIBS_DIR) fclean
 	@printf "[`tput setaf 3`make`tput sgr0`] fclean done\n"
 
