--- a/ressources/templates/main.c.template
+++ b/ressources/templates/main.c.template
@@ -4,6 +4,6 @@
 
 int main()
 {
-	printf("hello world from metamake [name] project!\n");
+	printf("hello world from metamake [#name#] project!\n");
 	return 0;
 }
