--- a/.github/workflows/metamake_ci.yml
+++ b/.github/workflows/metamake_ci.yml
@@ -13,22 +13,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: create .local/bin
-      run: mkdir -p $HOME/.local/bin
-    - name: change PATH var
-      run: export PATH="$PATH:$HOME/.local/bin"
-    - name: install metamake
-      run: make install
+    - name: insatll metamake
+      run: |
+        mkdir -p $HOME/.local/bin
+        export PATH="$PATH:$HOME/.local/bin"
+        make install
     - name: create dir
-      run: metamake dir
-    - run: cd dir
+      run: |
+        metamake dir
     - name: testing $>make
-      run: make
+      run: |
+        cd dir
+        make
+    - name: testing $>make clean
+      run: |
+        cd dir
+        make clean
     - name: testing $>make tests
-      run: make tests
+      run: |
+        cd dir
+        make tests
     - name: testing $>make fclean
-      run: make fclean
+      run: |
+        cd dir
+        make fclean
     - name: testing $>make run
-      run: make run
+      run: |
+        cd dir
+        make run
     - name: testing $>make all
-      run: make all
+      run: |
+        cd dir
+        make all
